establecimeinto de bordes

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <li class="list-item texto-custom-dos">Etiqueta 2</li>
         <li class="list-item texto-custom">Etiqueta 3</li>
     </ul>
-    <h2>Es un subtitulo en h2</h2>
+    <h2 class="espacio-abajo-custom">Es un subtitulo en h2</h2>
+    <div class="caja-ejemplo">
+        <button>Hola soy un boton</button>
     <li class="list-item">Soy un elemento fuera de unordered list</li>
-
+    </div>
 </body>
 </html>
