--- a/index.html
+++ b/index.html
@@ -7,19 +7,30 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <h1 class="texto-custom espacio-abajo-custom">Hola, soy un titulo</h1>
-    <h1 class="texto-custom-dos">Soy un subtítulo</h1>
-    <p id="identificador-parrafo">Un texto bonito</p>
-    <span>Hola, soy un span</span>
-    <ul>
-        <li class="list-item texto-custom">Etiqueta 1</li>
-        <li class="list-item texto-custom-dos">Etiqueta 2</li>
-        <li class="list-item texto-custom">Etiqueta 3</li>
-    </ul>
-    <h2 class="espacio-abajo-custom">Es un subtitulo en h2</h2>
-    <div class="caja-ejemplo">
-        <button>Hola soy un boton</button>
-    <li class="list-item">Soy un elemento fuera de unordered list</li>
-    </div>
+    <main class="main-content">
+        <nav class="navegador">
+            <li class="nav-item">
+                <a href="./cajitas.html">Cajitas</a>
+            </li>
+            <li class="nav-item">
+                <a href="./tarjetas.html">Tarjetas</a>
+            </li>
+        </nav>
+        <h1 class="texto-custom espacio-abajo-custom">Hola, soy un titulo</h1>
+        <h1 class="texto-custom-dos">Soy un subtítulo</h1>
+        <p id="identificador-parrafo">Un texto bonito</p>
+        <span>Hola, soy un span</span>
+        <ul>
+            <li class="list-item texto-custom">Etiqueta 1</li>
+            <li class="list-item texto-custom-dos">Etiqueta 2</li>
+            <li class="list-item texto-custom">Etiqueta 3</li>
+        </ul>
+        <h2 class="espacio-abajo-custom">Es un subtitulo en h2</h2>
+        <div class="caja-ejemplo">
+            <button>Hola soy un boton</button>
+        <li class="list-item">Soy un elemento fuera de unordered list</li>
+        </div>
+    </main>
+
 </body>
 </html>
