estado actual de lorem

--- a/cajitas.html
+++ b/cajitas.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cajitas</title>
+    <link rel="stylesheet" href="./styles/cajitas.css">
 </head>
 <body>
     <div>
-        <h1>Cajitas</h1>
+        <main class="cajitas-main">
+            <div class="cajita"> 
+                <h1>1</h1>
+                <span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate impedit blanditiis ducimus accusantium alias, harum doloremque dolore magni repudiandae perspiciatis nulla culpa eius totam soluta maiores amet praesentium aliquid commodi.
+                </span>
+            </div>
+            <div class="cajita"> 
+                <h1>2</h1>
+                <span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate impedit blanditiis ducimus accusantium alias, harum doloremque dolore magni repudiandae perspiciatis nulla culpa eius totam soluta maiores amet praesentium aliquid commodi.
+                </span>
+            </div>
+            <div class="cajita"> 
+                <h1>3</h1>
+                <span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate impedit blanditiis ducimus accusantium alias, harum doloremque dolore magni repudiandae perspiciatis nulla culpa eius totam soluta maiores amet praesentium aliquid commodi.
+                </span>
+        </div>
+        </main>
     </div>
 </body>
 </html>
