--- a/tarjetas.html
+++ b/tarjetas.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tarjetas</title>
 </head>
 <body>
-    <div>
-        <h1>Tarjetas</h1>
-    </div>
+
 </body>
 </html>
