creacion de la primera tarjetita verde

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Tarjetas</title>
+    <link rel="stylesheet" href="./styles/tarjeta.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <div id="tarjetauno">
+        <div class="contenedorimagen contenedorint">
+            <img 
+            class="imagenizq"
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
+        </div>
+        <div class="contenedortexto contenedorint">
+            <h3>Starbucks late por ti</h3>
+            <span>Por nuestro amor al cafe y todo lo demas</span>
+            <p>Estamos tristes de verte todos los dias</p>
+        </div>
+    </div>
 </body>
 </html>
