el texto no se alinea en medio

--- a/tarjetas.html
+++ b/tarjetas.html
@@ -17,9 +17,9 @@
             src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
         </div>
         <div class="contenedortexto contenedorint">
-            <h3>Starbucks late por ti</h3>
-            <span>Por nuestro amor al cafe y todo lo demas</span>
-            <p>Estamos tristes de verte todos los dias</p>
+            <h2>STARBUCKS LATE POR TI</h2>
+            <span>Por nuestro amor al café, a nuestros partners y a nuestros clientes.</span>
+            <p>¡Estamos felices de verte todos los días!</p>
         </div>
     </div>
 </body>
