creacion de la barra superior

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <main class="main-content">
         <nav class="navegador">
-            <ul>
+            <ul class="navegador-ul">
                 <li class="nav-item">
                     <a href="./cajitas.html">Cajitas</a>
                 </li>
                 <li class="nav-item">
                     <a href="./tarjetas.html">Tarjetas</a>
+                </li>
+                <li class="nav-item">
+                    <a href="./flexbox.html">Flexbox</a>
                 </li>
             </ul>
         </nav>
@@ -31,6 +34,14 @@
         <div class="caja-ejemplo">
             <button>Hola soy un boton</button>
         <li class="list-item">Soy un elemento fuera de unordered list</li>
+        </div>
+        <div class="caja-ejemplo">
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </span>
+            <p>Hola, soy una p jeje</p>
+            <button>Picame aqui</button>
+            <li class="list-item">Soy otra lista</li>
         </div>
     </main>
 
