finalización de la barra superior, con incremento en hover

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="./flexbox.html">Flexbox</a>
+                    <i class="fa-solid fa-shield-dog"></i>
                 </li>
             </ul>
         </nav>
