creación de la barra superior de starvucks fake, incluyendo los datos inferiores del sitio, como la cosa de las cookies

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     <a href="./flexbox.html">Flexbox</a>
                     <i class="fa-solid fa-shield-dog"></i>
                 </li>
+                <li class="nav-item">
+                    <a href="./starvucks.html">STARVUCKS</a>
+                        <i class="fa-solid fa-mug-hot"></i>
+                </li>
             </ul>
         </nav>
         <h1 class="texto-custom espacio-abajo-custom">Hola, soy un titulo</h1>
