creación de grid en html y css

--- a/starvucks.html
+++ b/starvucks.html
@@ -62,8 +62,9 @@
     </ul>
     </nav>
 </header>
+
 <main>
-    Aqui Van las tarjetas
+    Aqui van a ir mis tarjetas
 </main>
 
 <div class="cookie-banner" id="cookieBanner">
@@ -72,13 +73,15 @@
         Este Sitio Usa Cookies
     </p>
     <span>
-        Al navegar en nuestro sitio aceptas que usemos cookies para personalizar tu experiencia según la Declaración de
-        Privacidad.
+        Al navegar en nuestro sitio aceptas que usemos cookies para personalizar 
+        tu experiencia según la Declaración de Privacidad.
     </span>
     </div>
     <div class="banner-button-container">
     <button id="closeBannerButton" class="banner-button">Aceptar</button>
     </div>
 </div>
+
 </body>
+
 </html>
