--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                     <a href="./starvucks.html">STARVUCKS</a>
                         <i class="fa-solid fa-mug-hot"></i>
                 </li>
+                <li class="nav-item">
+                    <a href="./grid.html">Grid</a>
+                    
+                </li>
             </ul>
         </nav>
         <h1 class="texto-custom espacio-abajo-custom">Hola, soy un titulo</h1>
