media querie para 425

--- a/responsive.html
+++ b/responsive.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <main class="main-container">
-        <div class="caja1">
+        <div class="caja1 caja">
             <span>Caja 1</span>
         </div>
-        <div class="caja2">
+        <div class="caja2 caja">
             <span>Caja 2</span>
+        </div>
+        <div class="caja3 caja">
+            <span>Caja 3</span>
+        </div>
+        <div class="caja4 caja">
+            <span>aside</span>
         </div>
     </main>
 </body>
