creacion de la primera tarjeta en el sitio oficial de starvuks

--- a/starvucks.html
+++ b/starvucks.html
@@ -64,7 +64,18 @@
 </header>
 
 <main>
-    Aqui van a ir mis tarjetas
+    <div id="tarjetauno">
+        <div class="contenedorimagen contenedorint">
+            <img 
+            class="imagenizq"
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
+        </div>
+        <div class="contenedortexto contenedorint">
+            <h2>STARBUCKS LATE POR TI</h2>
+            <span>Por nuestro amor al café, a nuestros partners y a nuestros clientes.</span>
+            <p>¡Estamos felices de verte todos los días!</p>
+        </div>
+    </div>
 </main>
 
 <div class="cookie-banner" id="cookieBanner">
