--- a/starvucks.html
+++ b/starvucks.html
@@ -64,13 +64,17 @@
 </header>
 
 <main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
     <div id="tarjetauno">
-        <div class="contenedorimagen contenedorint">
+        <div class="contenedorimagena contenedorint">
             <img 
-            class="imagenizq"
+            class="imagenizqa"
             src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
         </div>
-        <div class="contenedortexto contenedorint">
+        <div class="contenedortextoa contenedorinta">
             <h2>STARBUCKS LATE POR TI</h2>
             <span>Por nuestro amor al café, a nuestros partners y a nuestros clientes.</span>
             <p>¡Estamos felices de verte todos los días!</p>
@@ -78,7 +82,24 @@
     </div>
 </main>
 
-<div class="cookie-banner" id="cookieBanner">
+<main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
+    <div id="tarjetados">
+    <div class="contenedorimagenb contenedorintb">
+        <img class="imagenderb" src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FHOLIDAY_2024-Spooky.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="Vasos Starbucks">
+        <div class="contenedortextob contenedorintb">
+        <h2>CELEBREMOS CON LOS FAVORITOS DE LA TEMPORADA</h2>
+        <span>¡Disfruta esta temporada con el regreso de Cranberry Mocha Blanco acompañados de Toffee Nut latte, Red Velvet Latte, Hazelnut Caramel latte y Holiday Cinnamon!</span>
+        </div>
+    </div>
+    </div>
+</main>
+
+<main>
+<div class="cookie-banner classstylecookie" id="cookieBanner">
     <div class="banner-text-container">
     <p class="banner-text-bold">
         Este Sitio Usa Cookies
@@ -92,6 +113,7 @@
     <button id="closeBannerButton" class="banner-button">Aceptar</button>
     </div>
 </div>
+</main>
 
 </body>
 
