--- a/starvucks.html
+++ b/starvucks.html
@@ -69,7 +69,7 @@
 
 <main>
     <div id="tarjetauno">
-        <div class="contenedorimagena contenedorint">
+        <div class="contenedorimagena contenedorinta">
             <img 
             class="imagenizqa"
             src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
@@ -95,6 +95,26 @@
         <span>¡Disfruta esta temporada con el regreso de Cranberry Mocha Blanco acompañados de Toffee Nut latte, Red Velvet Latte, Hazelnut Caramel latte y Holiday Cinnamon!</span>
         </div>
     </div>
+    </div>
+</main>
+
+<main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
+    <div id="tarjetatres">
+        <div class="contenedorimagenc contenedorintc">
+            <img 
+            class="imagenizqc"
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FMerch.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="bolsaroja">
+        </div>
+        <div class="contenedortextoc contenedorintc">
+            <h2>EL CAFÉ PERFECTO
+                PARA ESTA TEMPORADA</h2>
+            <span>Una taza de café preparada con Christmas Blend es la excusa perfecta para disfrutar con tus seres queridos.</span>
+            <p>#StarbucksLatte</p>
+        </div>
     </div>
 </main>
 
