ya quedó la cuarta imagen, pero falta darle que sea a la derecha

--- a/starvucks.html
+++ b/starvucks.html
@@ -119,6 +119,30 @@
 </main>
 
 <main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
+    <div id="tarjetacuatro">
+        <div class="contenedorimagend contenedorintd">
+            <img 
+            class="imagenderd"
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2Fstarbucks_rewards.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="manoconvaso">
+        </div>
+        <div class="contenedortextod contenedorintd">
+            <h2>RECOMPENSAS EN
+            TU BEBIDA FAVORITA</h2>
+            <span>Sé parte de Starbucks Rewards y obtén más café gratis, promociones exclusivas, accesos a productos
+            antes que nadie y más.</span>
+        </div>
+    </div>
+</main>
+
+<main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
 <div class="cookie-banner classstylecookie" id="cookieBanner">
     <div class="banner-text-container">
     <p class="banner-text-bold">
