no queda el boton de conoce más, regresando de comer lo termino

--- a/starvucks.html
+++ b/starvucks.html
@@ -143,6 +143,27 @@
 </main>
 
 <main>
+    <div id="tarjetacinco">
+        <div class="contenedorimagene contenedorinte">
+            <img 
+            class="imagenizqe"
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_HOLIDAY_2024_Apple%20(1).png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="manoconvaso">
+        </div>
+        <div class="contenedortextoe contenedorinte">
+            <h2>TODO Y TODOS POR EL PLANETA</h2>
+            <span>Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida.</span>
+        </div>
+        <div class="banner-button-red">
+            <button id="conoce-mas" class="banner-buttonn">Conoce más</button>
+        </div>
+    </div>
+</main>
+
+<main>
+    <div class="espaciadorblanco"></div>
+</main>
+
+<main>
 <div class="cookie-banner classstylecookie" id="cookieBanner">
     <div class="banner-text-container">
     <p class="banner-text-bold">
