recuperacion del html

--- a/starvucks.html
+++ b/starvucks.html
@@ -1,185 +1,261 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Starvucks</title>
-<link rel="shortcut icon" href="./imagenes/image.png" type="image/x-icon">
-<link rel="stylesheet" href="./styles/starvucks.css">
-<script src="https://kit.fontawesome.com/d8df87160d.js" crossorigin="anonymous"></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Starvucks</title>
+    <link rel="shortcut icon" href="./imagenes/image.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/starvucks.css" />
+    <script
+        src="https://kit.fontawesome.com/d8df87160d.js"
+        crossorigin="anonymous"
+        ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet"
+    />
     <script defer src="./scripts/scripts.js"></script>
 </head>
 
 <body>
-
-<header class="header">
-    <nav class="topnavbar">
+    <header class="header">
+        <nav class="topnavbar">
         <ul class="left-nav nav">
-            <li class="nav-item">
-                <a href="./index.html">
-                <img class="item-image" src="./imagenes/image.png" alt="">
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#">
-                Menu
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#">
-                Rewards
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="./index.html">
-                <i class="fa-solid fa-house"></i>
-                Home
-                </a>
-            </li>
-        </ul>
-        <ul class="right-nav nav">
-            <li class="nav-item">
-                <a href="#">
-            <i class="fa-solid fa-location-dot"></i>
-            Localizar Tienda
-                </a>
-            </li>
-            <li class="nav-item">
-        <a href="#">
-            Ingresar
-        </a>
+        <li class="nav-item">
+            <a href="./index.html">
+            <img class="item-image" src="./imagenes/image.png" alt="" />
+            </a>
         </li>
         <li class="nav-item">
-        <a href="#">
-            Únete
-        </a>
+            <a href="#"> Menu </a>
         </li>
-    </ul>
+        <li class="nav-item">
+            <a href="#"> Rewards </a>
+        </li>
+        <li class="nav-item">
+            <a href="./index.html">
+            <i class="fa-solid fa-house"></i>
+            Home
+            </a>
+        </li>
+        </ul>
+        <ul class="right-nav nav">
+        <li class="nav-item">
+            <a href="#">
+            <i class="fa-solid fa-location-dot"></i>
+            Localizar Tienda
+            </a>
+        </li>
+        <li class="nav-item">
+            <a href="#"> Ingresar </a>
+        </li>
+        <li class="nav-item">
+            <a href="#"> Únete </a>
+        </li>
+        </ul>
     </nav>
-</header>
+    </header>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
-
-<main>
-    <div id="tarjetauno">
+    <main>
+    <section id="tarjetauno">
         <div class="contenedorimagena contenedorinta">
-            <img 
+        <img
             class="imagenizqa"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="chicastarbucks">
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
+            alt="chicastarbucks"
+        />
         </div>
         <div class="contenedortextoa contenedorinta">
-            <h2>STARBUCKS LATE POR TI</h2>
-            <span>Por nuestro amor al café, a nuestros partners y a nuestros clientes.</span>
-            <p>¡Estamos felices de verte todos los días!</p>
+        <h2>STARBUCKS LATE POR TI</h2>
+        <p>
+            Por nuestro amor al café, a nuestros partners y a nuestros clientes.
+        </p>
+        <p>¡Estamos felices de verte todos los días!</p>
         </div>
-    </div>
-</main>
+    </section>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
-
-<main>
-    <div id="tarjetados">
-    <div class="contenedorimagenb contenedorintb">
-        <img class="imagenderb" src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FHOLIDAY_2024-Spooky.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="Vasos Starbucks">
-        <div class="contenedortextob contenedorintb">
-        <h2>CELEBREMOS CON LOS FAVORITOS DE LA TEMPORADA</h2>
-        <span>¡Disfruta esta temporada con el regreso de Cranberry Mocha Blanco acompañados de Toffee Nut latte, Red Velvet Latte, Hazelnut Caramel latte y Holiday Cinnamon!</span>
+    <section class="tarjetados">
+        <div class="tarjetados__div-img">
+        <img
+            class="tarjetados__img"
+            src="imagenes/tarjetaUno.png"
+            alt="Vasos Starbucks"
+        />
         </div>
-    </div>
-    </div>
-</main>
+        <div class="tarjetados__div-texto">
+        <h2 class="ptarjetados__title">
+            CELEBREMOS CON LOS FAVORITOS DE LA TEMPORADA
+        </h2>
+        <p class="ptarjetados__texto">
+            ¡Disfruta esta temporada con el regreso de Cranberry Mocha Blanco
+            acompañados de Toffee Nut latte, Red Velvet Latte, Hazelnut Caramel
+            latte y Holiday Cinnamon!
+        </p>
+        </div>
+    </section>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
-
-<main>
-    <div id="tarjetatres">
+    <section id="tarjetatres">
         <div class="contenedorimagenc contenedorintc">
-            <img 
+        <img
             class="imagenizqc"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FMerch.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="bolsaroja">
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FMerch.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
+            alt="bolsaroja"
+        />
         </div>
         <div class="contenedortextoc contenedorintc">
-            <h2>EL CAFÉ PERFECTO
-                PARA ESTA TEMPORADA</h2>
-            <span>Una taza de café preparada con Christmas Blend es la excusa perfecta para disfrutar con tus seres queridos.</span>
-            <p>#StarbucksLatte</p>
+        <h2>EL CAFÉ PERFECTO PARA ESTA TEMPORADA</h2>
+        <p>
+            Una taza de café preparada con Christmas Blend es la excusa perfecta
+            para disfrutar con tus seres queridos.
+        </p>
+        <p>#StarbucksLatte</p>
         </div>
-    </div>
-</main>
+    </section>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
-
-<main>
-    <div id="tarjetacuatro">
+    <section id="tarjetacuatro">
         <div class="contenedorimagend contenedorintd">
-            <img 
+        <img
             class="imagenderd"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2Fstarbucks_rewards.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="manoconvaso">
+            src="imagenes/tarjetaCuatro.png"
+            alt="manoconvaso"
+        />
         </div>
         <div class="contenedortextod contenedorintd">
-            <h2>RECOMPENSAS EN
-            TU BEBIDA FAVORITA</h2>
-            <span>Sé parte de Starbucks Rewards y obtén más café gratis, promociones exclusivas, accesos a productos
-            antes que nadie y más.</span>
+        <h2>RECOMPENSAS EN TU BEBIDA FAVORITA</h2>
+        <p>
+            Sé parte de Starbucks Rewards y obtén más café gratis, promociones
+            exclusivas, accesos a productos antes que nadie y más.
+        </p>
         </div>
-    </div>
-</main>
+    </section>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
-
-<main>
-    <div id="tarjetacinco">
+    <section id="tarjetacinco">
         <div class="contenedorimagene contenedorinte">
-            <img 
+        <img
             class="imagenizqe"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_HOLIDAY_2024_Apple%20(1).png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max" alt="manoconvaso">
+            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_HOLIDAY_2024_Apple%20(1).png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
+            alt="manoconvaso"
+        />
         </div>
         <div class="contenedortextoe contenedorinte">
-            <h2>TODO Y TODOS POR EL PLANETA</h2>
-            <span>Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida.</span>
+        <h2>TODO Y TODOS POR EL PLANETA</h2>
+        <p>
+            Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida.
+        </p>
         </div>
         <div class="banner-button-red">
-            <button id="conoce-mas" class="banner-buttonn">Conoce más</button>
+        <button id="conoce-mas" class="banner-buttonn">Conoce más</button>
         </div>
-    </div>
-</main>
+    </section>
 
-<main>
-    <div class="espaciadorblanco"></div>
-</main>
+    <section class="tarjetasFooter">
+        <div class="tarjetasFooter__tarjeta-A">
+        <div class="tarjeta-A__div-imagen">
+            <img
+            class="tarjeta-A__imagen"
+            src="imagenes/noticias.png"
+            alt="Noticias Starbucks"
+            />
+        </div>
+        <p class="tarjeta-A__texto">Consulta los eventos más recientes.</p>
+        <p class="tarjeta-A__p-boton">
+            <a href="#" class="tarjeta-A__boton">Aqui</a>
+        </p>
+        </div>
 
-<main>
-<div class="cookie-banner classstylecookie" id="cookieBanner">
-    <div class="banner-text-container">
-    <p class="banner-text-bold">
-        Este Sitio Usa Cookies
-    </p>
-    <span>
-        Al navegar en nuestro sitio aceptas que usemos cookies para personalizar 
-        tu experiencia según la Declaración de Privacidad.
-    </span>
-    </div>
-    <div class="banner-button-container">
-    <button id="closeBannerButton" class="banner-button">Aceptar</button>
-    </div>
-</div>
-</main>
+        <div class="tarjetasFooter__tarjeta-B">
+        <div class="tarjeta-B__div-imagen">
+            <img
+            class="tarjeta-B__imagen"
+            src="imagenes/promociones.png"
+            alt="Noticias Starbucks"
+            />
+        </div>
+        <div class="tarjeta-B__footer">
+            <p class="tarjeta-B__texto">Consulta los eventos más recientes.</p>
+            <p class="tarjeta-B__p-boton">
+            <a href="#" class="tarjeta-B__boton">Ver más</a>
+            </p>
+        </div>
+        </div>
+    </section>
 
+    <footer class="footer">
+        <div class="footer__wrapper">
+        <div class="footer__container">
+            <ul class="footer__SN">
+            <li class="footer__SN-li1">Sobre Nosotros</li>
+            <li class="footer__SN-li2">
+                <a href="#">Trabaja con nosotros</a>
+            </li>
+            <li class="footer__SN-li2">
+                <a href="#">Historias Starbucks</a>
+            </li>
+            </ul>
+
+            <ul class="footer__AC">
+            <li class="footer__AC-li1">Atención al cliente</li>
+            <li class="footer__AC-li2"><a href="#">Contáctanos</a></li>
+            <li class="footer__AC-li2">
+                <a href="#">Facturas Electrónicas</a>
+            </li>
+            <li class="footer__AC-li2"><a href="#">Formas de comprar</a></li>
+            </ul>
+        </div>
+
+        <ul class="footer__social">
+            <li>
+            <a href="https://www.facebook.com/StarbucksMexico"
+                ><img
+                src="imagenes/facebook.png"
+                alt="Logo facebook"
+                class="footer__social-facebook"
+            /></a>
+            </li>
+            <li><a href="https://www.instagram.com/starbucksMex/"></a></li>
+            <li><a href="https://x.com/StarbucksMex"></a></li>
+            <li><a href="https://www.youtube.com/user/StarbucksMexico"></a></li>
+        </ul>
+
+        <ul class="footer__secundario">
+            <li class="footer__secundario-li">
+            <a href="#">Accesibilidad Web</a>
+            </li>
+            <li class="footer__secundario-li">
+            <a href="#">Aviso de Privacidad</a>
+            </li>
+            <li class="footer__secundario-li"><a href="#">Boletines</a></li>
+            <li class="footer__secundario-li">
+            <a href="#">Condiciones de uso</a>
+            </li>
+            <li class="footer__secundario-li">
+            <a href="#">Mapa del sitio</a>
+            </li>
+            <li class="footer__secundario-li">
+            <a href="#">Preferencias sobre cookies</a>
+            </li>
+        </ul>
+
+        <p class="footer__copy">
+            Ⓒ 2024. Starbucks Cofee Company. Reservados todos los derechos
+        </p>
+        </div>
+    </footer>
+
+    <!--      <section class="cookie-banner classstylecookie" id="cookieBanner">
+        <div class="banner-text-container">
+        <p class="banner-text-bold">Este Sitio Usa Cookies</p>
+        <p>
+            Al navegar en nuestro sitio aceptas que usemos cookies para
+            personalizar tu experiencia según la Declaración de Privacidad.
+        </p>
+        </div>
+        <div class="banner-button-container">
+        <button id="closeBannerButton" class="banner-button">Aceptar</button>
+        </div>
+    </section>-->
+    </main>
 </body>
-
 </html>
