--- a/starvucks.html
+++ b/starvucks.html
@@ -58,21 +58,22 @@
     </nav>
     </header>
 
-    <main>
-    <section id="tarjetauno">
-        <div class="contenedorimagena contenedorinta">
+    <section class="tarjetauno">
+        <div class="tarjetauno__div-img">
         <img
-            class="imagenizqa"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_SB_Latte.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
-            alt="chicastarbucks"
+            class="tarjetauno__img"
+            src="imagenes/tarjetaDos.png"
+            alt="Chica Feliz"
         />
         </div>
-        <div class="contenedortextoa contenedorinta">
-        <h2>STARBUCKS LATE POR TI</h2>
-        <p>
+        <div class="tarjetauno__div-texto">
+        <h2 class="ptarjetauno__title">
+            STARBUCKS LATTE POR TI
+        </h2>
+        <p class="ptarjetauno__texto">
             Por nuestro amor al café, a nuestros partners y a nuestros clientes.
+            ¡Estamos felices de verte todos los días!
         </p>
-        <p>¡Estamos felices de verte todos los días!</p>
         </div>
     </section>
 
