todas las tarjetas están listas, menos la ultima con su boton fake, pero eso ahorita lo hago

--- a/starvucks.html
+++ b/starvucks.html
@@ -72,7 +72,7 @@
         </h2>
         <p class="ptarjetauno__texto">
             Por nuestro amor al café, a nuestros partners y a nuestros clientes.
-            ¡Estamos felices de verte todos los días!
+        <p class="ptarjetauno__texto">¡Estamos felices de verte todos los días!</p>
         </p>
         </div>
     </section>
@@ -97,57 +97,60 @@
         </div>
     </section>
 
-    <section id="tarjetatres">
-        <div class="contenedorimagenc contenedorintc">
+    <section class="tarjetatres">
+        <div class="tarjetatres__div-img">
         <img
-            class="imagenizqc"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2FMerch.png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
-            alt="bolsaroja"
+            class="tarjetatres__img"
+            src="imagenes/tarjetaTres.png"
+            alt="Bolsa Roja"
         />
         </div>
-        <div class="contenedortextoc contenedorintc">
-        <h2>EL CAFÉ PERFECTO PARA ESTA TEMPORADA</h2>
-        <p>
-            Una taza de café preparada con Christmas Blend es la excusa perfecta
-            para disfrutar con tus seres queridos.
+        <div class="tarjetatres__div-texto">
+        <h2 class="ptarjetatres__title">
+            EL CAFÉ PERFECTO PARA ESTA TEMPORADA
+        </h2>
+        <p class="ptarjetatres__texto">
+            Una taza de café preparada con Christmas Blend es la excusa perfecta para disfrutar con tus seres queridos.
+        <p class="ptarjetatres__texto">#StarbucksLatte</p>
         </p>
-        <p>#StarbucksLatte</p>
         </div>
     </section>
 
-    <section id="tarjetacuatro">
-        <div class="contenedorimagend contenedorintd">
+    <section class="tarjetacuatro">
+        <div class="tarjetacuatro__div-img">
         <img
-            class="imagenderd"
+            class="tarjetacuatro__img"
             src="imagenes/tarjetaCuatro.png"
-            alt="manoconvaso"
+            alt="Telefono Logo"
         />
         </div>
-        <div class="contenedortextod contenedorintd">
-        <h2>RECOMPENSAS EN TU BEBIDA FAVORITA</h2>
-        <p>
-            Sé parte de Starbucks Rewards y obtén más café gratis, promociones
-            exclusivas, accesos a productos antes que nadie y más.
+        <div class="tarjetacuatro__div-texto">
+        <h2 class="ptarjetacuatro__title">
+            RECOMPENSAS EN TU BEBIDA FAVORITA
+        </h2>
+        <p class="ptarjetacuatro__texto">
+            Sé parte de Starbucks Rewards y obtén más café gratis, promociones exclusivas, accesos a productos
+            antes que nadie y más.
         </p>
         </div>
     </section>
 
-    <section id="tarjetacinco">
-        <div class="contenedorimagene contenedorinte">
+    <section class="tarjetacinco">
+        <div class="tarjetacinco__div-img">
         <img
-            class="imagenizqe"
-            src="https://djftrby1k8irl.cloudfront.net/s3fs-public/2024-11%2F2024-10_HOLIDAY_2024_Apple%20(1).png?auto=format,compress&q=70&crop=focalpoint&ar=1.8:1.0&w=1400&fit=max"
-            alt="manoconvaso"
+            class="tarjetacinco__img"
+            src="imagenes/tarjetaCinco.png"
+            alt="Tres Vasos"
         />
         </div>
-        <div class="contenedortextoe contenedorinte">
-        <h2>TODO Y TODOS POR EL PLANETA</h2>
-        <p>
+        <div class="tarjetacinco__div-texto">
+        <h2 class="ptarjetacinco__title">
+            TODO Y TODOS POR EL PLANETA
+        </h2>
+        <p class="ptarjetacinco__texto">
             Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida.
+<!--Aqui falta el boton fake-->
         </p>
-        </div>
-        <div class="banner-button-red">
-        <button id="conoce-mas" class="banner-buttonn">Conoce más</button>
         </div>
     </section>
 
