creación de tarjetas de promociones y noticias

--- a/starvucks.html
+++ b/starvucks.html
@@ -163,10 +163,12 @@
             alt="Noticias Starbucks"
             />
         </div>
+        <div class="tarjeta-A__footer">
         <p class="tarjeta-A__texto">Consulta los eventos más recientes.</p>
         <p class="tarjeta-A__p-boton">
             <a href="#" class="tarjeta-A__boton">Aqui</a>
         </p>
+        </div>
         </div>
 
         <div class="tarjetasFooter__tarjeta-B">
@@ -174,7 +176,7 @@
             <img
             class="tarjeta-B__imagen"
             src="imagenes/promociones.png"
-            alt="Noticias Starbucks"
+            alt="Promociones"
             />
         </div>
         <div class="tarjeta-B__footer">
@@ -184,6 +186,7 @@
             </p>
         </div>
         </div>
+
     </section>
 
     <footer class="footer">
