logos de las apps listos

--- a/starvucks.html
+++ b/starvucks.html
@@ -149,7 +149,9 @@
         </h2>
         <p class="ptarjetacinco__texto">
             Trae tu vaso o termo favorito y obtén $8 de descuento en tu bebida.
-<!--Aqui falta el boton fake-->
+            <p class="tarjetacinco__p-boton">
+                <a href="#" class="tarjetacinco__boton">Conoce más</a>
+            </p>
         </p>
         </div>
     </section>
@@ -166,7 +168,7 @@
         <div class="tarjeta-A__footer">
         <p class="tarjeta-A__texto">Consulta los eventos más recientes.</p>
         <p class="tarjeta-A__p-boton">
-            <a href="#" class="tarjeta-A__boton">Aqui</a>
+            <a href="#" class="tarjeta-A__boton">Aquí</a>
         </p>
         </div>
         </div>
@@ -186,7 +188,6 @@
             </p>
         </div>
         </div>
-
     </section>
 
     <footer class="footer">
@@ -218,12 +219,22 @@
                 ><img
                 src="imagenes/facebook.png"
                 alt="Logo facebook"
-                class="footer__social-facebook"
-            /></a>
+                class="footer__social-facebook"/></a>
             </li>
-            <li><a href="https://www.instagram.com/starbucksMex/"></a></li>
-            <li><a href="https://x.com/StarbucksMex"></a></li>
-            <li><a href="https://www.youtube.com/user/StarbucksMexico"></a></li>
+            <li>
+            <a href="https://www.instagram.com/starbucksMex/">
+                <img src="imagenes/instagram.png" alt="Logo Ig" 
+                class="footer__social-Ig"></a></li>
+            <li>
+            <a href="https://x.com/StarbucksMex">
+                <img src="imagenes/gorjeo.png" alt="Logo X"
+                class="footer__social-X">
+            </a></li>
+            <li>
+            <a href="https://www.youtube.com/user/StarbucksMexico">
+                <img src="imagenes/youtube.png" alt="Logo YT"
+                class="footer__social-YT">
+            </a></li>
         </ul>
 
         <ul class="footer__secundario">
