footer de hasta abajo terminado

--- a/starvucks.html
+++ b/starvucks.html
@@ -244,7 +244,8 @@
             <li class="footer__secundario-li">
             <a href="#">Aviso de Privacidad</a>
             </li>
-            <li class="footer__secundario-li"><a href="#">Boletines</a></li>
+            <li class="footer__secundario-li">
+                <a href="#">Boletines</a></li>
             <li class="footer__secundario-li">
             <a href="#">Condiciones de uso</a>
             </li>
