--- a/starvucks.html
+++ b/starvucks.html
@@ -263,7 +263,7 @@
         </div>
     </footer>
 
-    <!--      <section class="cookie-banner classstylecookie" id="cookieBanner">
+    <section class="cookie-banner classstylecookie" class="cookieBanner">
         <div class="banner-text-container">
         <p class="banner-text-bold">Este Sitio Usa Cookies</p>
         <p>
@@ -272,9 +272,9 @@
         </p>
         </div>
         <div class="banner-button-container">
-        <button id="closeBannerButton" class="banner-button">Aceptar</button>
+        <button class="banner-button">Aceptar</button>
         </div>
-    </section>-->
+    </section>
     </main>
 </body>
 </html>
