--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto final</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
@@ -18,15 +18,15 @@
                 </li>
                 <li class="nav-item">
                     <a href="./flexbox.html">Flexbox</a>
-                    <i class="fa-solid fa-shield-dog"></i>
                 </li>
                 <li class="nav-item">
                     <a href="./starvucks.html">STARVUCKS</a>
-                        <i class="fa-solid fa-mug-hot"></i>
+                </li>
+                <li class="nav-item">
+                    <a href="./responsive.html">Responsive</a>
                 </li>
                 <li class="nav-item">
                     <a href="./grid.html">Grid</a>
-                    
                 </li>
             </ul>
         </nav>
