--- a/starvucks.html
+++ b/starvucks.html
@@ -182,7 +182,7 @@
             />
         </div>
         <div class="tarjeta-B__footer">
-            <p class="tarjeta-B__texto">Consulta los eventos más recientes.</p>
+            <p class="tarjeta-B__texto">Términos y condiciones.</p>
             <p class="tarjeta-B__p-boton">
             <a href="#" class="tarjeta-B__boton">Ver más</a>
             </p>
